--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/jaespinol/01100199-TacosPerry#readme",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
