--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "tacosperry",
+  "name": "guia-hoteles",
   "version": "1.0.0",
-  "description": "Mi primer proyecto html",
+  "description": "Nuestro primer proyecto de Nodejs",
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -o css/ css/",
+    "less": "lessc css/style.less css/style.css"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jaespinol/01100199-TacosPerry.git"
+    "url": "git+https://jaespinol@bitbucket.org/jaespinol/guia-hoteles.git"
   },
   "author": "Jose Antonio Espino Lopez",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jaespinol/01100199-TacosPerry/issues"
-  },
-  "homepage": "https://github.com/jaespinol/01100199-TacosPerry#readme",
+  "homepage": "https://bitbucket.org/jaespinol/guia-hoteles#readme",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
+    "-": "0.0.1",
     "bootstrap": "^4.5.2",
+    "g": "^2.0.1",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "less": "^3.12.2",
+    "open-iconic": "^1.1.1",
+    "popper.js": "^1.16.1",
+    "sass": "^1.26.11"
   }
 }
